[package]
name = "solana-patches"
description = "Patches to work around SP1 time and other util restrictions"
documentation = ""
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "solana_patches"
